# png_metadata_compare

./: .gitignore  Cargo.toml  README.md  compare-config.example.json  compare-config.json  tauri.conf.json
capabilities/: default.json
docs/superpowers/plans/: 2026-04-22-png-metadata-compare.md  2026-04-23-png-directory-batch-compare.md  2026-04-24-png-desktop-web-ui-redesign.md  2026-04-24-ui-redesign.md  2026-04-24-ui-refresh.md  2026-05-05-png-compare-redesign.md  2026-06-12-tree-hierarchy-visual.md  2026-06-12-ui-comfort-redesign.md  2026-06-22-selection-bar-and-single-image.md  2026-06-30-equivalence-map-wildcard.md
docs/superpowers/specs/: 2026-04-22-png-metadata-compare-design.md  2026-04-23-png-directory-batch-compare-design.md  2026-04-24-png-desktop-web-ui-redesign-design.md  2026-04-24-ui-redesign-design.md  2026-04-24-ui-refresh-design.md  2026-05-05-png-compare-redesign-design.md  2026-06-12-tree-hierarchy-visual-design.md  2026-06-12-ui-comfort-redesign-design.md  2026-06-22-selection-bar-and-single-image-design.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  build-config.test.ts  main.tsx
frontend/src/lib/: api.ts  (+12 more)
icons/: icon.icns
src/: app.rs  batch_report.rs  batch_scan.rs  config.rs  desktop_api.rs  diff.rs  error.rs  inspection.rs  lib.rs  main.rs  metadata.rs  pairing_key.rs  png_reader.rs
src/ui/: detail.rs  summary.rs  tree.rs
tmp/: MOTHERDUCK DESIGN SYSTEM GUIDE — COMPLETE EDITION.md  MOTHERDUCK INTERACTION DESIGN GUIDE.md  stop_plate_json_meta.md
(+53 files in other folders)
