[package]
name = "png_metadata_compare"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
