[package]
name = "png_metadata_compare"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
rfd = "0.16"
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# tauri 的 dev/生产判定依赖此 feature（dev = !custom-protocol），与 cargo profile 无关。
# 直接用 cargo 构建生产版本时必须显式启用：cargo run --release --features custom-protocol
# （tauri CLI 的 `tauri build` 会自动启用它）
custom-protocol = ["tauri/custom-protocol"]
